[FEAT] 최종 개발 사항 반영