@@ -3,22 +3,60 @@ package webdoc.authentication.service;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import webdoc.authentication.domain.entity.TutorSpeciality;
 import webdoc.authentication.domain.entity.user.User;
 import webdoc.authentication.domain.entity.user.response.UserResponse;
 import webdoc.authentication.domain.entity.user.tutee.Tutee;
 import webdoc.authentication.domain.entity.user.tutor.Tutor;
+import webdoc.authentication.domain.entity.user.tutor.enums.AuthenticationProcess;
 import webdoc.authentication.domain.entity.user.tutor.enums.Specialities;
 import webdoc.authentication.repository.UserRepository;
 
 import java.util.List;
 import java.util.stream.Collectors;
 
+/*
+ * 다른 서버를 위한 인증서비스 제공 서비스
+ */
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
 public class AuthServerService {
     private final UserRepository userRepository;
-    // 해당 유저의 성명까지 가져 옴
+
+    // 튜터 이름을 통해 튜터 정보 반환
+    public List<UserResponse> fetchTutorsByName(String name){
+        List<Tutor> tutors = userRepository.findTutorByName(name);
+
+        return tutors.stream()
+                .filter(e->e.getAuthenticationProcess() == AuthenticationProcess.AUTHENTICATION_SUCCESS)
+                .map(e->{
+
+                    List<Specialities> specialities =
+                            e.getSpecialities()
+                                    .stream().map(TutorSpeciality::getSpecialities)
+                                    .toList()
+                                    .stream().collect(Collectors.toSet())
+                                    .stream().collect(Collectors.toList());
+
+                    return UserResponse.builder()
+                            .contact(e.getContact())
+                            .email(e.getEmail())
+                            .id(e.getId())
+                            .isTutor(true)
+                            .name(e.getName())
+                            .nickName(e.getName())
+                            .profile(e.getProfile())
+                            .role("ROLE_TUTOR")
+                            .selfDescription(e.getSelfDescription())
+                            .specialities(specialities)
+                            .build();
+
+
+                }).collect(Collectors.toList());
+
+    }
+    // 유저 id를 통해 user의 본명까지 반환
     public UserResponse fetchFullUserById(Long id){
 
         User user = userRepository.findUserById(id)
@@ -28,11 +66,11 @@ public class AuthServerService {
             return
                     UserResponse.builder()
                             .contact("")
-                            .name("")
+                            .name("탈퇴회원")
                             .email("")
                             .id(null)
                             .isTutor(false)
-                            .nickName("")
+                            .nickName("탈퇴회원")
                             .profile("")
                             .selfDescription("")
                             .specialities(null)
@@ -45,8 +83,10 @@ public class AuthServerService {
 
             List<Specialities> specialities =
                     tutor.getSpecialities()
-                            .stream().map(s->s.getSpecialities())
-                            .collect(Collectors.toList());
+                            .stream().map(TutorSpeciality::getSpecialities)
+                            .toList()
+                            .stream().collect(Collectors.toSet())
+                            .stream().collect(Collectors.toList());
             return
                     UserResponse.builder()
                             .contact(tutor.getContact())
@@ -80,6 +120,7 @@ public class AuthServerService {
 
     }
 
+    // 유저 아이디로 성명 제외 정보 반환
 
     public UserResponse fetchUserById(Long id){
 
@@ -93,7 +134,7 @@ public class AuthServerService {
                             .email("")
                             .id(null)
                             .isTutor(false)
-                            .nickName("")
+                            .nickName("탈퇴회원")
                             .profile("")
                             .selfDescription("")
                             .specialities(null)
@@ -106,14 +147,17 @@ public class AuthServerService {
 
             List<Specialities> specialities =
                     tutor.getSpecialities()
-                            .stream().map(s->s.getSpecialities())
-                            .collect(Collectors.toList());
+                            .stream().map(TutorSpeciality::getSpecialities)
+                            .toList()
+                            .stream().collect(Collectors.toSet())
+                            .stream().collect(Collectors.toList());
             return
                     UserResponse.builder()
                             .contact(tutor.getContact())
                             .email(tutor.getEmail())
                             .id(tutor.getId())
                             .isTutor(true)
+                            .selfDescription(tutor.getSelfDescription())
                             .nickName(tutor.getName())
                             .profile(tutor.getProfile())
                             .role(tutor.getRole())
@@ -139,6 +183,7 @@ public class AuthServerService {
 
     }
 
+    // 이메일로 유저 성명 정보 제외 반환
     public UserResponse fetchUserByEmail(String email){
 
         User user = userRepository.findUserByEmail(email)
@@ -151,7 +196,7 @@ public class AuthServerService {
                             .email("")
                             .id(null)
                             .isTutor(false)
-                            .nickName("")
+                            .nickName("탈퇴회원")
                             .profile("")
                             .selfDescription("")
                             .specialities(null)
@@ -163,8 +208,10 @@ public class AuthServerService {
 
             List<Specialities> specialities =
                     tutor.getSpecialities()
-                            .stream().map(s->s.getSpecialities())
-                            .collect(Collectors.toList());
+                            .stream().map(TutorSpeciality::getSpecialities)
+                            .toList()
+                            .stream().collect(Collectors.toSet())
+                            .stream().collect(Collectors.toList());
             return
                     UserResponse.builder()
                             .contact(tutor.getContact())
@@ -191,6 +238,40 @@ public class AuthServerService {
                             .specialities(null)
                             .build();
         }
+
+    }
+
+    // 모든 강사 목록을 가져옴
+    public List<UserResponse> fetchAllTutors(){
+
+        return userRepository.findAll()
+                .stream().filter(e-> e instanceof Tutor && ((Tutor) e).getAuthenticationProcess() == AuthenticationProcess.AUTHENTICATION_SUCCESS)
+                .map(e->{
+                    Tutor tutor = (Tutor) e;
+
+                    List<Specialities> specialities =
+                            tutor.getSpecialities()
+                                    .stream().map(TutorSpeciality::getSpecialities)
+                                    .toList()
+                                    .stream().collect(Collectors.toSet())
+                                    .stream().collect(Collectors.toList());
+
+                    return UserResponse.builder()
+                            .contact(tutor.getContact())
+                            .email(tutor.getEmail())
+                            .id(tutor.getId())
+                            .isTutor(true)
+                            .nickName(tutor.getName())
+                            .profile(tutor.getProfile())
+                            .specialities(specialities)
+                            .build();
+
+                }).collect(Collectors.toList());
+
+
+
+
+
 
     }
 }
